# funky-greek

./: .dockerignore  ADVANCED_ANALYSIS_FEATURES.md  API_FEATURES_LIST.md  CHART_RECOGNITION_IMPROVEMENTS.md  DEPLOYMENT.md  DEPLOYMENT_ENHANCED.md  Dockerfile  ENHANCED_ANALYSIS_GUIDE.md  LOCAL_ANALYSIS_README.md  ONLINE_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  SECURITY_GUIDE.md  SECURITY_STATUS_REPORT.md  SECURITY_SUMMARY.md  analyze_security_logs.py  batch_local_analysis.py  build.sh  chart_analyzer.py  chart_analyzer_enhanced.py  config.py  config_enhanced.py  deployed_service_test_20250903_143117.json  deployed_service_test_20250903_162445.json  docker-compose.yml  find_domains.py  frontend_example.html  frontend_integration_guide.md  local_analysis.py  main.py  main_enhanced.py  models.py  monitor_security.py  production_security_config.py  production_test.py  pyproject.toml  render.yaml  requirements.txt  requirements_enhanced.txt  start_service.bat  (+13 more)
examples/: ReactChartAnalyzer.jsx  flask_integration.py  vanilla_js_integration.html
