[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-chart-analyzer"
version = "1.0.0"
description = "A cost-effective service for analyzing stock charts and providing technical analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "scikit-image>=0.21.0",
    "ta>=0.10.2",
    "pydantic>=2.5.0",
]

[tool.setuptools]
packages = ["."]
